force-app/main/default/objects/breg_Acquisition_Transaction__c/breg_Acquisition_Transaction__c.object-meta.xml
<CustomObject>
    <description>Aalta BREG-2653</description>
    <label>Acquisition Transaction</label>
    <nameField>
        <displayFormat>AT-{0}</displayFormat>
        <label>Acquisition Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Acquisition Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>