force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_Acquisition_Name__c.field-meta.xml
<CustomField>
    <fullName>breg_Acquisition_Name__c</fullName>
    <description>Aalta BREG-2653</description>
    <label>Acquisition Name</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>