force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_Acquisition_Type__c.field-meta.xml
<CustomField>
    <fullName>breg_Acquisition_Type__c</fullName>
    <description>Aalta BREG-2653</description>
    <label>Acquisition Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MSTR</fullName>
            </value>
            <value>
                <fullName>SMMR</fullName>
            </value>
            <value>
                <fullName>TMMR</fullName>
            </value>
            <value>
                <fullName>TNMR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>