force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_BRIM_CERTIFICATE_NO__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_CERTIFICATE_NO__c</fullName>
    <description>Aalta BREG-2653</description>
    <label>BRIM CERTIFICATE NO</label>
    <length>22</length>
    <type>Text</type>
</CustomField>