force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_BRIM_FILE_SUFFIX__c.field-meta.xml
<CustomField>
    <fullName>breg_BRIM_FILE_SUFFIX__c</fullName>
    <description>Aalta BREG-2653</description>
    <label>BRIM FILE SUFFIX</label>
    <length>2</length>
    <type>Text</type>
</CustomField>