force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_Category__c.field-meta.xml
<CustomField>
    <fullName>breg_Category__c</fullName>
    <description>Aalta BREG-2653</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TNTMSM_Classifications</valueSetName>
    </valueSet>
</CustomField>