force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_Merged_Entity__c.field-meta.xml
<CustomField>
    <fullName>breg_Merged_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2653</description>
    <label>Merged Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Acquisition Transactions</relationshipLabel>
    <relationshipName>breg_Acquisition_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>