force-app/main/default/objects/breg_Acquisition_Transaction__c/fields/breg_Transaction__c.field-meta.xml
<CustomField>
    <fullName>breg_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aalta BREG-2653</description>
    <label>BREG Transaction</label>
    <referenceTo>breg_Transaction__c</referenceTo>
    <relationshipLabel>Acquisition Transactions</relationshipLabel>
    <relationshipName>breg_Acquisition_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>